--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <ul>
-  <li><a routerLink="">Home</a></li>
+  <li><a routerLink="">Home Page</a></li>
   <li><a routerLink="about/48">about</a></li>  <!-- this value that serves as the id should usually come frome the backend of the site -->
 </ul>
 
